# CritTomato

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
src/: index.html
src-tauri/: Cargo.toml  app.manifest  build.rs  resource.rc  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/js/: app.js  clock.js  i18n.js  pomodoro.js  timezone.js
src/styles/: main.css
