[package]
name = "crit-tomato"
version = "0.1.0"
edition = "2021"

[lib]
name = "crit_tomato"
crate-type = ["staticlib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
